# circle_api

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: db.py  env.py  main.py  migrate.py  pyproject.toml
app/cruds/: group.py  group_chat.py  ota.py  ota2.py  ota3.py  task.py  user.py
app/migration/: env.py
app/migration/versions/: 130628c5d045_usertable.py  198792cdd13a_usertable.py  1b0e4b3cd367_change_type_for_uid_from_user.py  25210d4c5e6e_addcolumnsforuser_name_device_token.py  2aa879fbd4b8_create_chat_model.py  41d8b75b5b75_addcolumntoauthorityforgroupusers.py  47800f214bca_added_columns.py  5ad3ae036e27_otameshi1.py  65bd277dd471_addcolumntonameforgroup.py  74fae73b8413_added_columnsdevicetoken_for_user.py  8c4206335074_usertableaddcolumfirsttime.py  8ca493d2c15d_added_columns2.py  920978b45423_deletecolumntoidforgroupuser.py  996d4471e2e7_added_columns.py  b3d9ffd67d77_changeformodel.py  b5c98bdcccff_addcolumnsforgroupchatupdate.py  baa2f13de2cb_added_tags.py  bf293cdad293_groupandgroupuser.py
app/migrations/: env.py
app/migrations/versions/: d36b24d0ee0e_added_columns.py
app/models/: group.py  group_chat.py  tag.py  task.py  task2.py  user.py
app/routers/: group.py  group_chat.py  task.py  user.py
app/schemas/: group.py  group_chat.py  tag.py  task.py  user.py  user_group.py
app/test/chat/: test_chat.py
