[tool.poetry]
name = "circle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
sqlalchemy = "^2.0.0"
aiomysql = "^0.1.1"
firebase-admin = "^5.2.0"
alembic = "^1.9.1"
redis = "^4.5.4"
pyjwt = "^2.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
websockets = "^11.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
